Added function to index for personality and adjustment to 88rising write-up

--- a/88rising.html
+++ b/88rising.html
@@ -158,7 +158,7 @@
                     <p>After considering both the business and consumers’ perspectives, my teammates and I saw a missed opportunity for 88rising as many fans weren’t engaging and discovering more of 88rising’s roster due to many of their artists and collaborative content being scattered across different platforms. We believed that by <span>leveraging 88rising’s unique Asian American identity and collaborative works from diverse artists across different cultural backgrounds, we could help fans discover and connect more with artists and provide artists with a piece of the spotlight they have lacked until now.</span></p>
                     <figure class="project-img static-img figure-analysis">
                         <img alt="User Journey Map" class="lazy js-off" src="img/88rising/UserJourney_100.png"
-                        data-src="img/88rising/UserJourney_400.png"
+                        data-src="img/88rising/UserJourney_100.png"
                         data-srcset="img/88rising/UserJourney_400.png 400w,
                                      img/88rising/UserJourney_600.png 600w"
                         data-sizes="100w">
@@ -272,6 +272,7 @@
                         <figcaption class="caption-analysis">88rising Artist Page Navigation</figcaption>
                     </figure> 
                     <h3>Stakeholder Value</h3>
+                    <div class="grid project-card-2c stakeholder-value">
                         <div class="project-quotes">
                             <p>88rising (business)</p>
                             <h5>Fostering a loyal fan base through increasing song engagements and merch sales. Highlighting lesser known artists to deepen their talent pool all while further promoting Asian American media to mainstream global audiences.</h4>
@@ -280,6 +281,7 @@
                             <p>Fans (Consumer)</p>
                             <h5>Helps create a more diverse music & artists range through enhanced discoverability and deeper artists engagement. Fans gain an appreciation of the artist’s creativity, influences and personal experiences.</h4>
                         </div>
+                    </div>
                 </div>
             </section>
 
