--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 </head>
 
-<body>
+<!-- Reminder to make the nav into borgor on mobile -->
+<body>   
     <header>
         <nav class="grid nav-grid-master">
             <a href="index.html" class="nav-item logo-text">
@@ -28,14 +29,50 @@
             </div>
 
         </nav>
-
         <section class="main-banner">
-            <!-- idea: maybe have random images that showcases my personality, maybe 2 col grid, on hover showcases different item and pets that shows who i am -->
-            <div>
-                <h1 class="reveal-text">Hello, I'm Luke.</h1>
+            <div class="img-container">
+                <div id="img-container">
+                    <div class="random-imgs" id="img-test">
+                        <img alt="Brian Jessel Project Physical Prototype" class="lazy js-off reveal-text" src="img\otherProjects\BJ_100.jpg"
+                        data-src="img\otherProjects\BJ_300.jpg"
+                        data-srcset="img\otherProjects\BJ_300.jpg 400w"
+                        data-sizes="100w" width="300">
+                        <img alt="SFU Anime Poster Ren" class="lazy js-off reveal-text" src="img\otherProjects\SADtoberA_100.png"
+                        data-src="img\otherProjects\SADtoberA_400.png"
+                        data-srcset="img\otherProjects\SADtoberA_400.png 400w"
+                        data-sizes="100w" width="400">
+                        <img alt="SFU Anime Poster Ayumi" class="lazy js-off reveal-text" src="img\otherProjects\SADtoberR_100.png"
+                        data-src="img\otherProjects\SADtoberR_400.png"
+                        data-srcset="img\otherProjects\SADtoberR_400.png 400w"
+                        data-sizes="100w" width="400">
+                        <img alt="Brian Jessel Project Digital Mock up" class="lazy js-off reveal-text" src="img\otherProjects\BJMockUp_100.jpg"
+                        data-src="img\otherProjects\BJMockUp_300.jpg"
+                        data-srcset="img\otherProjects\BJMockUp_300.jpg 300w"
+                        data-sizes="100w" width="300">
+                        <img alt="Photography sample" class="lazy js-off reveal-text" src="img\otherProjects\Insta_100.jpg"
+                        data-src="img\otherProjects\Insta_300.jpg"
+                        data-srcset="img\otherProjects\Insta_300.jpg 300w"
+                        data-sizes="100w" width="300">
+                        <img alt="Fraser Health Digital Asset" class="lazy js-off reveal-text" src="img\otherProjects\FH_100.jpg"
+                        data-src="img\otherProjects\FH_300.jpg"
+                        data-srcset="img\otherProjects\FH_300.jpg 300w"
+                        data-sizes="100w" width="300">
+                        <img alt="Pew (my cat :D)" class="lazy js-off reveal-text" src="img\otherProjects\pew_100.jpg"
+                        data-src="img\otherProjects\pew_300.jpg"
+                        data-srcset="img\otherProjects\pew_300.jpg 300w"
+                        data-sizes="100w" width="300">
+                        <img alt="FurEverHome Teaser" class="lazy js-off reveal-text" src="img\fureverhome\FureverhomeTeaser_100.jpg"
+                        data-src="img\fureverhome\FureverhomeTeaser_400.jpg"
+                        data-srcset="img\fureverhome\FureverhomeTeaser_400.jpg 400w"
+                        data-sizes="100w" width="400">
+                        <video class="lazy js-off reveal-text" src="img/summerfest/poster_reveal.webm" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser"></video> 
+                        <video class="lazy js-off reveal-text" src="img\otherProjects\KAFU.webm" autoplay loop playsinline muted aria-label="KAFU Motion Graphic"></video> 
+                    </div>
+                </div>
+                <h1 class="reveal-text">Hello, I'm <a class="in-text-link" id="banner-text">Luke.</a></h1>
                 <p class="text-box">A Product and UI/UX Designer based in Vancouver, BC - Currently with <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> and <a href="https://www.facebook.com/anitrendzplus" class="in-text-link" target="_blank">Anime Trending+</a>. With previous experience at <a href="https://www.fraserhealth.ca/" class="in-text-link" target="_blank">Fraser Health</a></p>
-            </div>
-        </section>
+                </div>
+        </section> 
     </header>
 
     <main>
@@ -207,24 +244,6 @@
                     </div>
                 </div>
             </div>
-            <!-- scheduled to move to new "works" page -->
-            <!-- <div class="scroll-reveal container left active">
-                <div class="grid featured-project" id="fifth-project">
-
-                    <div class="project-details project-item ">
-                        <p class="project-type">3D Modelling/Animation - Award Winning</p>
-                        <h3>POV: You're a Karamatsu Girl</h3>
-                        <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a 3rd year university course</p>
-                        
-                        <a href="Karamatsu.html" class="label-button">View Karamatsu Girl</a>
-                    </div>
-
-                    <div class="project-img project-item " id="iframe-container">
-                        <iframe src="https://www.youtube.com/embed/P-Jd2lbXlTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
-
-                </div>
-            </div> -->
         </section>
         <p class="h2-sub">More projects analysis and project gallery coming soon 👀!!</p>
     </main>
