--- a/summerfest.html
+++ b/summerfest.html
@@ -352,7 +352,7 @@
                         <p class="project-type">Experience Design - UX Research - UI/UX Design</p>
                         <h3>88rising Experience Design</h3>
                         <p class="project-description">Reimagining 88rising’s website experience to assist fans in discovering and supporting lesser-known artists.</p>
-                        <a href="summerfest.html" class="label-button">View Project</a>
+                        <a href="88rising.html" class="label-button">View Project</a>
                     </div>
                     <div class="project-img project-item">
                         <figure>
