--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
+<!-- Scheduled to move to new works/archive page -->
+
+
+
+
+
 <head>
 
     <meta charset="utf-8" />
