fixing fureverhome link, typos and highlighted keywords on case studies

--- a/88rising.html
+++ b/88rising.html
@@ -200,11 +200,11 @@
                     <h3>Interactive prototype</h3>
                     <div id="interactive-prototype">
                         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="65vh" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaRfynDHRrGy4l6AnK5kR3P%2F88rising-Demo-Prototype%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D1-1603%26viewport%3D1628%252C1254%252C0.08%26t%3DIa0LVaECprAUeI6e-1%26scaling%3Dmin-zoom%26mode%3Ddesign" allowfullscreen></iframe>
-                        <p class="caption-analysis">Use <span><strong>fullscreen and fit to width</strong></span> for better use of the prototype.</p>
+                        <p class="caption-analysis">Use <span><strong>fullscreen and fit to width</strong></span> for the best experience of the prototype.</p>
                     </div>
                     
                     <h3>Connecting Through Languages</h3>
-                    <p>Our research showed that similar to 88rising’s artist roster, their fans are spread across the globe, having different cultural backgrounds and experiences. The use of different languages when they first land on the site helps ease fans into new artists by establishing relatable connections based on language and culture. This helps provide a starting point and draws in casual audiences unfamiliar with where to begin.</p>
+                    <p>Our research showed that similar to 88rising’s artist roster, their fans are spread across the globe, having different cultural backgrounds and experiences. The use of different languages when they first land on the site <span>helps ease fans into new artists by establishing relatable connections based on language and culture</span>. This helps provide a starting point and draws in casual audiences unfamiliar with where to begin.</p>
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img\88rising\homepage.webm" src="img\88rising\Landing Page_100.png" autoplay loop playsinline muted aria-label="Revamped 88rising landing page"></video>
                         <img alt="After Effects puppet tool"class="lazy js-off" src="img\88rising\Landing Page_100.png"
@@ -227,7 +227,7 @@
                     </figure> 
 
                     <h3>Interweaving Voices</h3>
-                    <p>Each of 88rising’s artists pairs unheard voices with a distinctive style that sets them apart from conventional artists and each other. To express this, the artist collaboration page strayed away from traditional grids as a way to provide a more vibrant and energetic experience, with the use of opposing motions representing a new wave of clashing cultures.</p>
+                    <p>Each of 88rising’s artists pairs unheard voices with a distinctive style that sets them apart from conventional artists and each other. To express this, the artist collaboration page strayed away from traditional grids as <span>a way to provide a more vibrant and energetic experience, with the use of opposing motions representing a new wave of clashing cultures.</span></p>
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img\88rising\collaborations.webm" src="img\88rising\Collab_100.png" autoplay loop playsinline muted aria-label="88rising Artist Collaboration Page"></video>
                         <img alt="88rising Artist Collaboration Page"class="lazy js-off" src="img\88rising\Collab_100.png"
@@ -250,7 +250,7 @@
                     </figure> 
 
                     <h3>Adaptable Individuality</h3>
-                    <p>Each artist page features image stacks, efficiently organizing a large amount of relatable and personal artist content across different platforms onto a single screen. This design enhances accessibility for casual fans, allowing them to easily go down the rabbit hole about the artists they find intriguing. Furthermore, the design's adaptability extends to various artists, serving as a versatile framework applicable to different members of 88rising's roster.</p>
+                    <p>Each artist page features image stacks, efficiently organizing a large amount of relatable and personal artist content across different platforms onto a single screen. This design enhances accessibility for casual fans, allowing them to easily go down the rabbit hole about the artists they find intriguing. Furthermore, the design's adaptability extends to various artists, serving as <span>a versatile framework applicable to different members of 88rising's roster.</span></p>
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img\88rising\artists.mov" src="img\88rising\ArtistPage_100.png" autoplay loop playsinline muted aria-label="88rising Artist Page Navigation"></video>
                         <img alt="88rising Artist Page Navigation"class="lazy js-off" src="mg\88rising\ArtistPage_100.png"
@@ -317,7 +317,7 @@
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>FurEverHome</h3>
                         <p class="project-description">A Senior UI/UX Project in developing a fictional mobile application dedicated to support new and current rescued dog owners.</p>
-                        <a href="Fureverhome.html" class="label-button">View Project</a>
+                        <a href="fureverhome.html" class="label-button">View Project</a>
                     </div>
                     <div class="project-img project-item">
                         <figure>
