--- a/fureverhome.html
+++ b/fureverhome.html
@@ -192,7 +192,7 @@
                         <figcaption class="caption-analysis">FurEverHome's style guide</figcaption>
                     </figure> 
                     <h3>Low to High Fidelity Wireframes</h3>
-                    <p>When wireframing the application in grey box form, as a team, we all took part in coming up with different designs and ideas. When it came time to fully flesh out the screens, we diverged with each person taking a different user flow and having a meeting after each day to discuss our progress and address encountered issues collaboratively Here I was mainly in charge of wireframing and prototyping the secondary user flow for potential users while providing support and feedback for the primary and the volunteer flow.</p>
+                    <p>When wireframing the application in grey box form, as a team, we all took part in coming up with different designs and ideas. When it came time to fully flesh out the screens, we diverged with each person taking a different user flow and having a meeting after each day to discuss our progress and address encountered issues collaboratively. Here I was mainly in charge of wireframing and prototyping the secondary user flow for potential users while providing support and feedback for the primary and the volunteer flow.</p>
                     <figure class="project-img static-img figure-analysis">
                         <img alt="Low Fidelity Wireframes" class="lazy js-off" src="img\fureverhome\LowFidelity_100.jpg"
                         data-src="img\fureverhome\LowFidelity_400.jpg"
@@ -330,7 +330,7 @@
 
                     <div id="interactive-prototype">
                         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="65vh" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOO9ux9EHlY0RBSzmIo7Dhj%2FInteractive-Mockup%3Fpage-id%3D1254%253A15707%26type%3Ddesign%26node-id%3D1358-43959%26viewport%3D-223%252C-269%252C0.1%26t%3DXfeyihOcE7ZpkCdJ-1%26scaling%3Dscale-down%26starting-point-node-id%3D1358%253A43959%26show-proto-sidebar%3D1%26mode%3Ddesign" allowfullscreen></iframe>
-                        <p class="caption-analysis">Use <strong><span>fullscreen</span></strong> for better use of the prototype.</p>
+                        <p class="caption-analysis">Use <strong><span>fullscreen</span></strong> for the best experience of the prototype.</p>
                     </div>
                 </div>
 
