--- a/Splitwise.html
+++ b/Splitwise.html
@@ -268,7 +268,7 @@
                     
                     <div id="interactive-prototype">
                         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="65vh" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fg1tXkHHChjyNEs63AG7rjh%2FSplitwise-Feature-Design-(public)%3Fpage-id%3D321%253A1562%26type%3Ddesign%26node-id%3D555-1812%26viewport%3D-468%252C-86%252C0.27%26t%3DUmL2dw9ue8BygXPA-1%26scaling%3Dscale-down%26starting-point-node-id%3D555%253A1812%26show-proto-sidebar%3D1%26mode%3Ddesign" allowfullscreen></iframe>
-                        <p class="caption-analysis">Use <strong><span>fullscreen</span></strong> for better use of the prototype.</p>
+                        <p class="caption-analysis">Use <strong><span>fullscreen</span></strong> for the best experience of the prototype.</p>
                     </div>
                 </div>
             </section>
