--- a/fureverhome.html
+++ b/fureverhome.html
@@ -76,7 +76,7 @@
                 <h2>Initial Research</h2>
                 <div class="research-wireframe">
                     <h3>The issue at hand</h3>
-                    <p>Approaching this project, my teammates and I first sought out research and journal articles, focusing on secondary research to familiarise ourselves with this domain and figure out if this is a domain we could potentially intervene and address with design. These articles pointed to resistance among potential and newly rescued dog owners with The Zebra’s survey noting <span>>60% of adopted pets are returned or given away after 6 months, citing concerns about potential health risks and a lack of knowledge on how to effectively care for rescued pets.</span></p>
+                    <p>Approaching this project, my teammates and I first sought out research and journal articles, focusing on secondary research to familiarise ourselves with this domain and figure out if this is a domain we could potentially intervene and address with design. These articles pointed to resistance among potential and newly rescued dog owners with The Zebra’s survey noting <span>60% of adopted pets are returned or given away after 6 months, citing concerns about potential health risks and a lack of knowledge on how to effectively care for rescued pets.</span></p>
                     <div class="project-quotes">
                         <h4>"42.8% of pet owners favors shelter or rescue adoption for the chance to give second chances, however, <span>without proper guidance and support, they may face challenges in ensuring successful and lasting adoptions</span>"</h4>
                         <p>— The Zebra’s 2023 survey with 1500 participants</p>
