Fixing typo in splitwise in index and changed banner img

--- a/Splitwise.html
+++ b/Splitwise.html
@@ -38,14 +38,14 @@
                                 <img alt="Splitiwse Banner image" class="lazy js-off" src="img/Splitwise/Splitwise_banner_100.png"
                                 data-src="img/Splitwise/Splitwise_banner_400.png"
                                 data-srcset="img/Splitwise/Splitwise_banner_400.png 400w,
-                                             img/Splitwise/Splitwise_banner_800.png   800w,
-                                             img/Splitwise/Splitwise_banner_1080.png  1080w"
+                                             img/Splitwise/Splitwise_banner_800.png  800w,
+                                             img/Splitwise/Splitwise_banner_1080.png 1080w"
                                 data-sizes="100w">
                                 <noscript>
                                     <img src="img/Splitwise/Splitwise_banner_400.png" alt="Splitiwse Banner image"
                                     srcset="img/Splitwise/Splitwise_banner_400.png 400w,
-                                            img/Splitwise/Splitwise_banner_800.png   800w,
-                                            img/Splitwise/Splitwise_banner_1080.png  1080w" 
+                                            img/Splitwise/Splitwise_banner_800.png 800w,
+                                            img/Splitwise/Splitwise_banner_1080.png 1080w" 
                                     sizes="(min-width: 74rem) 50vw, 100vw"
                                     >
                                 </noscript>
@@ -290,7 +290,7 @@
                     </div>
                     <div class="project-img project-item">
                         <figure>
-                            <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video>
+                            <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"></video>
                             <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg"
                             data-src="img/2021_Icebreaker/Spring2021_fallback_400.jpg"
                             data-srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
@@ -298,7 +298,7 @@
                             data-sizes="100w">
 
                             <noscript>  
-                                <video src="img/2021_Icebreaker/Spring2021.webm" autoplay loop playsinline muted width="1920" height="1080" aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video> 
+                                <video src="img/2021_Icebreaker/Spring2021.webm" autoplay loop playsinline muted width="1920" height="1080" aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"></video> 
                                     <img src="img/2021_Icebreaker/Spring2021_fallback_400.jpg" alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"
                                     srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
                                             img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w" 
