--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="project-details project-item ">
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>Splitwise Feature Design</h3>
-                        <p class="project-description">A Feature Design Project that aims to create a new feature for the expense splitting mobile pplication Splitwise.</p>
+                        <p class="project-description">A Feature Design Project that aims to create a new feature for the expense splitting mobile application Splitwise.</p>
                         
                         <a href="Splitwise.html" class="label-button">View Project</a>
                     </div>
