Updated 88rising project to auto include full width settings for prototype

--- a/88rising.html
+++ b/88rising.html
@@ -114,7 +114,7 @@
                         </noscript>
                     </figure> 
                     <h3>The root of the issue</h3>
-                    <p>To find the root of the problem, the team conducted user interviews and surveys with <span>89 respondents</span> (1 over 88!!), ranging from casual to die-hard fans regarding their music-sharing habits, and their perception of 88rising and its artist roster.</p>
+                    <p>To find the root of the problem, the team researched online for secondary data in combination with user interviews and surveys with <span>89 respondents</span> (1 over 88!!), ranging from casual to die-hard fans regarding their music-sharing habits, and their perception of 88rising and its artist roster.</p>
                     <p>These interviews pointed to a lack of awareness within the fanbase of 88rising’s frequent releases with <span>62% of respondents not aware of their monthly releases.</span> Another question that was brought up during the survey was if they agree that 88rising is declining in popularity, to which the majority of the survey respondents agreed. However, when asked the reason why, <span>41% of our casual fans respondents attributed it to the lack of engagement</span> from the brand themselves, despite having an interest in 88rising’s new talents and their signature sounds.</p>
                     <figure class="project-img static-img figure-analysis">
                         <img alt="Research Insights" class="lazy js-off" src="img\88rising\ResearchFindings_100.png"
@@ -199,7 +199,7 @@
 
                     <h3>Interactive prototype</h3>
                     <div id="interactive-prototype">
-                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="65vh" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaRfynDHRrGy4l6AnK5kR3P%2F88rising-Demo-Prototype%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D1-1603%26viewport%3D1628%252C1254%252C0.08%26t%3DIa0LVaECprAUeI6e-1%26scaling%3Dmin-zoom%26mode%3Ddesign" allowfullscreen></iframe>
+                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="65vh" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaRfynDHRrGy4l6AnK5kR3P%2F88rising-Demo-Prototype%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D1-1603%26viewport%3D2952%252C2231%252C0.17%26t%3Dw2G7fgFCZoDXCAc6-1%26scaling%3Dscale-down%26mode%3Ddesign" allowfullscreen></iframe>
                         <p class="caption-analysis">Use <span><strong>fullscreen and fit to width</strong></span> for the best experience of the prototype.</p>
                     </div>
                     
