minor typo and graph changes

--- a/88rising.html
+++ b/88rising.html
@@ -133,7 +133,7 @@
                         </noscript>
                     </figure>  
                     <h3>Why redesign the 88rising website?</h3>
-                    <p><span>88rising's current website primarily focuses on merchandise</span>, lacking clarity on its current roster of artists and background information. Although YouTube serves as a significant touchpoint for their original content, it is scattered across various channels, <span>making it challenging for fans to discover and learn more</span> about their favourite artists</p>
+                    <p><span>88rising's current website primarily focuses on merchandise</span>, lacking clarity on its current roster of artists and background information. Although YouTube serves as a significant touchpoint for their original content, it is scattered across various channels, <span>making it challenging for fans to discover and learn more</span> about their favourite artists.</p>
                     <figure class="figure-analysis project-img">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img\88rising\88website.webm" src="img\88rising\88website_100.png" autoplay loop playsinline muted aria-label="88rising's current website and content on YouTube"></video>
                         <img alt="Character's Mask On" class="lazy js-off" src="img\88rising\88website_100.png"
@@ -193,9 +193,9 @@
                             sizes="(min-width: 60rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">88rising's experience design prototype walkthrough (use fullscreen for the full experience :D)</figcaption>
+                        <figcaption class="caption-analysis">88rising's experience design prototype walkthrough (<span><strong>use fullscreen for the full experience :D</strong></span>)</figcaption>
                     </figure>
-                    <p><span>This intervention invites both fans and visitors to explore 88rising as a whole and delve deeper into artists they may not have heard of previously.</span> Throughout the site, fans can watch and listen to different collaborations and stories from artists, revealing the inspirations, cultural context, and symbolism of their songs while also giving fans a preview of who they are behind the screen. In doing such, our proposal aims to simplify discovery and support lesser-known artists from 88rising through establishing connections with the audience.</p>
+                    <p><span>This intervention invites both fans and visitors to explore 88rising as a whole and delve deeper into artists they may not have heard of previously.</span> Throughout the site, fans can watch and listen to different collaborations and stories from artists, revealing the inspirations, cultural context, and symbolism of their songs while also giving fans a preview of who they are behind the screen. With user sharability and discoverbility in mind, our proposal aims to simplify discovery and support lesser-known artists from 88rising through establishing connections with the audience.</p>
 
                     <h3>Interactive prototype</h3>
                     <div id="interactive-prototype">
