--- a/fureverhome.html
+++ b/fureverhome.html
@@ -245,7 +245,7 @@
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">Insights gathered through interviews </figcaption>
+                        <figcaption class="caption-analysis">Feature comparison between different pet app</figcaption>
                     </figure> 
 
                     <h3>User Testing and Addressing Issues</h3>
@@ -320,7 +320,7 @@
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">FurEverHome's Pitch Video - Click on video to play</figcaption>
+                        <figcaption class="caption-analysis">FurEverHome's Pitch Video (<span><strong>use fullscreen for the full experience :D</strong></span>)</figcaption>
                     </figure>
 
                     <p>Aiming to support both new and current rescued dog owners through working alongside local shelters and organizations such as the BC SPCA, we came up with "FurEverHome", the first app of its kind that focuses on making sure every rescued dog receives the love, care, and attention they deserve. View the pitch video <a href="https://youtu.be/TkZZVFSmbB4?si=Hxq4GFms7i4oFG6Q" class="in-text-link" target="_blank">here</a> if you're on mobile!</p>
