minor fixes to the structure of site

--- a/Splitwise.html
+++ b/Splitwise.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <title>Splitwise Feature Design | Luke Do</title>
+    <title>Splitwise UX Design | Luke Do</title>
 
     <link href="css/main_work.css" rel="stylesheet">
 
@@ -55,7 +55,7 @@
                         <div class="project-details">
                             <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                             <h1>Splitwise Feature Design</h1>
-                            <p class="project-description">A Feature Design Project that aims to create a new feature for the expense splitting app Splitwise</p> 
+                            <p class="project-description">A Senior UI/UX feature design project for the expense splitting mobile application Splitwise.</p> 
                             <div class="grid project-roles">
                                 <div class="col-1">
                                     <p class="role-type">The Team</p>
@@ -66,6 +66,7 @@
                                     <p class="role-type">Roles</p>
                                     <p class="role-details">UX Researcher</p>
                                     <p class="role-details">UI Designer</p>
+                                    <p class="role-details">Prototype</p>
                                 </div>
                                 <div class="col-3">
                                     <p class="role-type">Tools</p>
@@ -81,8 +82,7 @@
         <main>
             <section class="project-analysis" id="Background">
                 <h2>Background</h2>
-                <!-- Update fureverhome link when finish -->
-                <p>The Splitwise Feature Design is a project for an Interaction Design university course that aims to familiarise ourselves with working on an existing design system before developing a new design system in a later project with <a href="#" class="in-text-link">Fureverhome</a>. My team and I were assigned to research and create a new feature for <a href="https://www.splitwise.com/" class="in-text-link" target="_blank">Splitwise</a>, a payment app that automatically calculates multiple bills and splits expenses for a group of people.</p>
+                <p>The Splitwise Feature Design is a project for an Interaction Design university course that aims to familiarise ourselves with working on an existing design system before developing a new design system in a later project with <a href="fureverhome.html" class="in-text-link">Fureverhome</a>. My team and I were assigned to research and create a new feature for <a href="https://www.splitwise.com/" class="in-text-link" target="_blank">Splitwise</a>, a payment app that automatically calculates multiple bills and splits expenses for a group of people.</p>
             </section>
             <section class="project-analysis" id="Process">
                 <h2>Process</h2>
