--- a/summerfest.html
+++ b/summerfest.html
@@ -87,7 +87,7 @@
             <section class="project-analysis" id="Background">
                 <h2>Background</h2>
                 <p><a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">The SFU Summer Festival</a> (or Summerfest as I like to call it) is an annual event hosted by the SFU Anime Club with the goal of providing local anime fans with the opportunity to experience a Japanese “Matsuri” style festival in Vancouver. Being a member of the SFU Anime Club community, I have been a part of the Summerfest planning committee since 2018, working as their Social Media Coordinator, Graphic and Motion Designer and in-house photographer on the day of the event! Through being a part of Summerfest, I was able to hone my skills as a designer on a regular basis.</p>
-                <p>As this is an ongoing project and encompasses different design aspects, this page will go over an overview of what I did for each role at the SFU Summer Festival.</p>
+                <p>As my role within The SFU Summer Festival encompasses various different design aspects, this page will go over an overview of what I did for each role at The SFU Summer Festival.</p>
             </section>
             <section class="project-analysis">
                 <h2>Design Work</h2>
